# JAX-NaNDebugger

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
docs/: api.md  examples.md  index.md
docs/guide/: forward.md  gradients.md  report.md  transforms.md
examples/: 01_quickstart_sqrt_of_negative.py  02_softmax_overflow.py  03_zero_divided_by_zero.py  04_origin_vs_propagation.py  05_nan_hidden_inside_jit.py  06_nan_trace_in_data_loop.py  07_nan_already_in_inputs.py  08_call_stack_of_nan_origin.py  09_grad_sqrt_at_zero.py  10_grad_where_log_trap.py  11_grad_feedforward_network.py  index.html
guide/forward/: index.html
guide/gradients/: index.html
guide/report/: index.html
guide/transforms/: index.html
search/: search_index.json
src/jax_nan_debugger/: __init__.py  _jax_compat.py  forward.py  interpreter.py  inverse.py  report.py
tests/: test_forward.py  test_inverse.py  test_transforms.py
