[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-nan-debugger"
version = "0.1.0"
description = "Pinpoint the exact operation that produces NaNs in JAX forward (and later, inverse) runs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jiaqiang Peng", email = "pengjiaqiang86@gmail.com" }]
dependencies = ["jax>=0.4.30"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
